# mutatum.github.io

./: .gitignore  CMakeLists.txt  CUSTOMIZATION.md  README.md  build-portfolio.sh  euler-methods-analysis.html  index.html  mathematical-foundations.html
docs/quarto-projects/: euler-methods-analysis.html  mathematical-foundations.html
euler-methods-analysis_files/libs/bootstrap/: bootstrap.min.css
examples/: euler_methods_demo.cpp
mathematical-foundations_files/libs/bootstrap/: bootstrap.min.css
portfolio-website/src/pug/: index.pug
portfolio-website/src/scss/: styles.scss
portfolio-website/src/scss/components/: _skills.scss
quarto-projects/: euler-methods-analysis.qmd  mathematical-foundations.qmd
scripts/: main.js
styles/: main.css
